// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-segmented render empty segmented 1`] = `
<div
  class="rc-segmented"
/>
`;

exports[`rc-segmented render label with ReactNode 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      <div
        id="android"
      >
        Android
      </div>
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      <h2>
        Web
      </h2>
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented ok 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Android
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Web
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented with CSSMotion 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Android
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Web3
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented with options 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Android
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Web
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented with options null/undefined 1`] = `
<div
  class="rc-segmented rc-segmented-disabled"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    />
  </label>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    />
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    />
  </label>
</div>
`;

exports[`rc-segmented render segmented with options: 1 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      1
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      2
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      3
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      4
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      5
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented with options: 2 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Android
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Web
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented with options: disabled 1`] = `
<div
  class="rc-segmented"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item rc-segmented-item-disabled"
  >
    <input
      class="rc-segmented-item-input"
      disabled=""
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Android
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Web
    </div>
  </label>
</div>
`;

exports[`rc-segmented render segmented: disabled 1`] = `
<div
  class="rc-segmented rc-segmented-disabled"
>
  <label
    class="rc-segmented-item rc-segmented-item-selected"
  >
    <input
      checked=""
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      iOS
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Android
    </div>
  </label>
  <label
    class="rc-segmented-item"
  >
    <input
      class="rc-segmented-item-input"
      type="radio"
    />
    <div
      class="rc-segmented-item-label"
    >
      Web
    </div>
  </label>
</div>
`;
